<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LunchListActivity!</string>
    <string name="app_name">Yong\'s LunchList</string>
    <string name="saveButtonLabel">Save</string>
    <string name="nameFieldLabel">Name</string>
    <string name="addressFieldLabel">Address</string>
    <string name="phoneFieldLabel">Phone</string>
    <string name="locationFieldLabel">Location</string>
    <string name="nameFieldHint">Restaurant name</string>
    <string name="typeFieldLabel">Type</string>
    <string name="feedFieldHint">Feed URL</string>
    <string name="notesFieldHint">Notes</string>
    <string name="locationFieldHint">(not set)</string>
    <string name="restaurantType01">Take-out</string>
    <string name="restaurantType02">Sit-down</string>
    <string name="restaurantType03">Delivery</string>
    <string name="restaurantTypeIconDescription">Restaurant Type</string>
    <string name="option_unselected_message">No restaurant selected</string>
    <string name="empty_list_message">Use the menu to add a restaurant, yo!</string>
    <string name="widget_empty">No Restaurants. Bwah!</string>
    <string name="alarmMessage">It\'s time for a drink!</string>
    
    <string name="sortPreferenceSummary">Choose the order the list uses</string>
    <string name="sortPreferenceTitle">Sort Order</string>
    <string name="sortPreferenceDialogTitle">Choose a sort order</string>
    <string name="alarmPreferenceTitle">Sound a Lunch Alarm</string>
    <string name="alarmPreferenceSummary">Check if you want to know when it is time to drink</string>
    <string name="timePreferenceSummary">Choose your lunch time!</string>
    <string name="timePreferenceTitle">Lunch Alarm Time</string>
    <string name="notificationStyleTitle">Use a Notification</string>
    <string name="notificationStyleSummary">Check if you want a status bar icon at lunch time or uncheck for a full-screen notice</string>
    <string name="alarmRingtonePreferenceTitle">Alarm Ringtone</string>
    <string name="alarmRingtoneSummary">Indicate the ringtone to play when it is lunch time.</string>
    
    <string name="network_unavailable_message">You must be online in order to do that.</string>
    
    <string name="db_name">lunchlist.db</string>
	<string name="db_create_table">CREATE TABLE restaurants (_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, address TEXT, type TEXT, notes TEXT, url TEXT, feed TEXT, lat REAL, lon REAL, phone TEXT);</string>
	<string name="db_select_restaurants">SELECT _id, name, address, type, notes, url, feed, lat, lon, phone FROM restaurants ORDER BY</string>
	<string name="db_select_restaurant">SELECT _id, name, address, type, notes, url, feed, lat, lon, phone FROM restaurants WHERE _id=?</string>
	<string name="migration01_add_url_to_restaurants">ALTER TABLE restaurants ADD COLUMN url TEXT</string>
	<string name="migration02_add_feed_to_restaurants">ALTER TABLE restaurants ADD COLUMN feed TEXT</string>
	<string name="migration03_add_lat_to_restaurants">ALTER TABLE restaurants ADD COLUMN lat REAL</string>
	<string name="migration04_add_lon_to_restaurants">ALTER TABLE restaurants ADD COLUMN lon REAL</string>
	<string name="migration05_add_phone_to_restaurants">ALTER TABLE restaurants ADD COLUMN phone TEXT</string>
</resources>