<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="sort_order"
        android:title="@string/sortPreferenceTitle"
        android:summary="@string/sortPreferenceSummary"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:dialogTitle="@string/sortPreferenceDialogTitle" />
    <CheckBoxPreference
        android:key="alarm"
        android:title="@string/alarmPreferenceTitle"
        android:summary="@string/alarmPreferenceSummary" />
    <edu.mines.csci498.ybakos.lunchlist.TimePreference
        android:key="alarm_time"
        android:title="@string/timePreferenceTitle"
        android:defaultValue="12:00"
        android:summary="@string/timePreferenceSummary"
        android:dependency="alarm" />
    <CheckBoxPreference
        android:key="use_notification"
        android:title="@string/notificationStyleTitle"
        android:defaultValue="true"
        android:summary="@string/notificationStyleSummary"
        android:dependency="alarm" />
    <RingtonePreference
        android:key="alarm_ringtone"
        android:title="@string/alarmRingtonePreferenceTitle"
        android:summary="@string/alarmRingtoneSummary"
        android:showSilent="true"
        android:dependency="alarm" />
</PreferenceScreen>