<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
	<TableLayout android:id="@+id/details"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:stretchColumns="1"
	    android:shrinkColumns="1" >
	    <TableRow>
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/nameFieldLabel" />
	        <EditText
	            android:id="@+id/name"
	            android:inputType="text"
	            android:hint="@string/nameFieldHint"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" 
							android:textColor="#66AA66" >
	            <requestFocus />
	        </EditText>
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#AA6666"
	    				android:typeface="monospace"
	            android:text="@string/addressFieldLabel" />
	        <AutoCompleteTextView android:id="@+id/address"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:singleLine="true" />
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/typeFieldLabel" />
	        <RadioGroup
	            android:id="@+id/restaurantTypes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	            <RadioButton
	                android:id="@+id/take_out"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/restaurantType01" />
	            <RadioButton
	                android:id="@+id/sit_down"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/restaurantType02" />
	            <RadioButton
	                android:id="@+id/delivery"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/restaurantType03" />
	        </RadioGroup>
	    </TableRow>
	    <Button
	        android:id="@+id/save"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/saveButtonLabel" />
	</TableLayout>
	<ListView android:id="@+id/restaurants"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_above="@id/details" />
</RelativeLayout>